# waves

./: .gitignore  CLAUDE.md  Makefile  PLAN-plugins.md  PLAN.md  PRODUCT.md  README.md  go.mod
backend/: ARCHITECTURE.md  main.py  pyproject.toml
backend/waves/: __main__.py  audio.py  config.py  server.py  store.py
backend/waves/pipeline/: edit.py  enhance.py  summarize.py
backend/waves/providers/: base.py  registry.py
backend/waves/providers/llm/: anthropic.py  ollama.py  openai_chat.py
backend/waves/providers/transcription/: deepgram.py  huggingface.py  mlx.py  openai_whisper.py  whisper_local.py
cmd/waves/: main.go
cmd/wavesd/: main.go
electron/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  tsconfig.json  tsconfig.main.json  vite.config.ts
electron/components/: app-sidebar.tsx  note-editor.tsx  settings-dialog.tsx  site-header.tsx  theme-provider.tsx
electron/main/: daemon.cts  index.cts  meeting-detector.cts  preload.cts
electron/renderer/: App.tsx  banner.html  index.css  index.html
electron/src/: daemon.ts  electron.d.ts  globals.css  main.ts  main.tsx  meeting-detector.ts  preload.ts  routeTree.gen.ts
internal/audio/: capture.go  subprocess.go
internal/config/: config.go
internal/models/: downloader.go
internal/server/: server.go
internal/store/: store.go
internal/summarize/: claude.go  llama.go  openai.go  provider.go  restapi.go  workflow.go
internal/transcribe/: command.go  deepgram.go  openai.go  provider.go  (+2 more)
scripts/: install-all.sh  install-app.sh  install-cli.sh  setup.sh
(+24 files in other folders)
